<resources>
    <string name="app_name">Sentinel</string>
    <string name="touchscreen">Touch any part of the screen to confirm if its working or not, phone vibrates if positive and not if otherwise.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_head_title">SVNL Sentinel</string>
    <string name="mobile_model">Mobile Model</string>
    <string name="subscription_expires">Subscription Expires - 27 Feb 2020</string>
    <string name="check_device_status">Check Device Status</string>
    <string name="menu_claim">Make a Claim</string>
    <string name="trade_in_upgrade">Trade In/Upgrade</string>
    <string name="menu_profile">Profile</string>
    <string name="about_sentinel">About Sentinel</string>
    <string name="faq">FAQ</string>
    <string name="menu_contact">Contact Us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="profile_image">profile_image</string>
    <string name="welcome">Welcome</string>
    <string name="phone">08138028915</string>
    <string name="health_check">Health Check</string>
    <string name="check_now">Check Now</string>
    <string name="subscription">Subscription Status</string>
    <string name="data_backup">Data Backup</string>
    <string name="make_a_claim">Make a Claim</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="login">Login To Your Account</string>
    <string name="login_instr">You can login to account from here</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="account_registration">Account Registration</string>
    <string name="personal_information">Personal Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login_to_existing_account">Login to existing account</string>
    <string name="update">Update</string>
    <string name="change_password">Change Password</string>
    <string name="device_valuation_results">Device Valuation Results</string>
    <string name="qualified_for_trade_in">Qualified for Trade-in</string>
    <string name="trade_in_or_upgrade_now">Trade in or Upgrade Now</string>
    <string name="multitouch_detect_text">Touch the screen with two or more fingers to detect touch.</string>
    <string name="item_description">item_description</string>
    <string name="batter_dialog">Checking the battery health.</string>
    <string name="wifi_dialog">Checking the WI-FI hardware is functional.</string>
    <string name="cellular_dialog">Checking the cellular network hardware by detecting if connected.</string>
    <string name="headphone_jack_dialog">Checks the headphone jack if it detects headphone (earphone) insertion.</string>
    <string name="charging_jack_dialog">Checks that the charging port is still functional.</string>
    <string name="compass_dialog">Checks the accuracy of the device compass.</string>
    <string name="sensor_dialog">Verify that the proximity sensor detects near and far.</string>
    <string name="bluetooth_dialog">Checks the bluetooth hardware by scanning for devices.</string>
    <string name="move">Continue</string>
    <string name="multouch_dialog">Tests the multitouch functionality works properly</string>
    <string name="multitouch_helper_dialog">Press start to begin.\nTouch the screen with two or more fingers to test. Press back button to exit the test.</string>
    <string name="touch_helper_dialog">Press start to begin.\nPaint the screen with your finger. Press back button to exit the test.</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="multitouch">Multitouch</string>
    <string name="did_you_feel">Did you feel vibration when you multi touched the screen?</string>
    <string name="touch_dialog">Test the touchscreen functionality works properly.</string>
    <string name="touch_details">Did it all pixels respond to touch?</string>
    <string name="permission_details">You need to enable all required permissions, click go to settings to proceed, then select permission and enable all permissions.</string>
    <string name="touch_heading">Touchscreen</string>
    <string name="permission_heading">Permission</string>
    <string name="display_dialog">Check the display for missing pixels.</string>
    <string name="earphone_dialog">Checks that the earphone is functional.</string>
    <string name="speaker_dialog">Checks that the main speaker is functional.</string>
    <string name="mic_dialog">Checks that the device microphone is functional.</string>
    <string name="receiver_dialog">Checks that the receiver speaker is functional.</string>
    <string name="earphone_details_dialog">Press start when you are ready.</string>
    <string name="display_header">Display</string>
    <string name="display_details">Did you see series of coloured screen?</string>
    <string name="backlight_dialog">Tests that the backlight level changes.</string>
    <string name="vibrate_dialog">Tests that the device vibration is functional.</string>
    <string name="vibrate_dialog_detail">Phone will vibrate until the end of test. For effective result, make sure device is not on power saver mode.</string>
    <string name="diim_dialog_details">If the brightness level changes press Pass, otherwise press Fail.</string>
    <string name="fail_btn">Fail</string>
    <string name="pass_btn">Pass</string>
    <string name="home_dialog">Tests that the home button is functional</string>
    <string name="fingerprint_dialog">Tests that the fingerprint hardware is functional</string>
    <string name="home_dialog_details">Press the home button. The app should close. Relaunch the application by pressing the app icon or by using task manager.</string>
    <string name="fingerprint_dialog_details">Place your finger on the fingerprint sensor for recognition. Ensure that your device lock screen is activated and finger has already been registered on the device.</string>
    <string name="volume_dialog">Checks that the audio control is functional.</string>
    <string name="volume_dialog_details">Press the volume up and volume down buttons individually.</string>
    <string name="volume_up_pressed">Volume Up pressed</string>
    <string name="volume_down_pressed">Volume down pressed</string>
    <string name="power_dialog">Test that the power button is functional.</string>
    <string name="back_dialog">Test that the back button is functional.</string>
    <string name="recent_dialog">Test that the task manager button is functional.</string>
    <string name="power_dialog_detail">Press the power button, the screen will go off, press again to turn it on.</string>
    <string name="back_dialog_detail">Press the back button.</string>
    <string name="recent_dialog_detail">Press the task manager button, then navigate back to validate result.</string>
    <string name="front_cam_dialog">Tests that the front camera is functional.</string>
    <string name="back_cam_dialog">Tests that the back camera is functional.</string>
    <string name="front_cam_dialog_details">Test the front camera. You will be redirected to take a picture, if you see what you snap, tap on pass, otherwise tap fail.</string>
    <string name="back_cam_dialog_details">Test the back camera. You will be redirected to take a picture, if you see what you snap, tap on pass, otherwise tap fail.</string>
    <string name="flashlight_dialog_detail">Verify if the flash LED for the camera is on.</string>
    <string name="network_dialog_detail">Test will pass once cellular network is detected.</string>
    <string name="headphone_dialog_detail">Test will pass once headphone (earphone) is detected.</string>
    <string name="charging_dialog_detail">Test will pass once charger is detected.</string>
    <string name="sensor_dialog_detail">To detect proximity, cover the upper part of your device or pretend to answer a call.</string>
    <string name="compass_dialog_detail">Rotate device in all axis and check the degree and radian angle update. If it detects changes, press pass, otherwise press fail.</string>
    <string name="bluetooth_dialog_detail">Test will pass once a bluetooth device is found.</string>
    <string name="wifi_dialog_detail">Test will pass once WI-FI network is detected and connected.</string>
    <string name="insert_headphone">No headphone detected, please insert headphone.</string>
    <string name="remove_headphone">Please remove earphone.</string>
    <string name="now_playing">Audio now playing.\n\nIf you hear any sound press PASS, otherwise press FAIL.</string>
    <string name="recorder">Recording started…\nMake some sound to measure the amplitude at high and low frequency.</string>
    <string name="now_playing_receiver">Audio now playing through receiver speaker.\n\nIf you can\'t hear the sound, kindly place the phone to your ear.</string>
    <string name="splash_screen_logo">splash screen logo</string>
    <string name="general_info">General Info</string>
    <string name="storage">Storage</string>
    <string name="memory">Memory</string>
    <string name="power">Power</string>
    <string name="phone_state">Phone State</string>
    <string name="not_support_fingerprint">Your device doesn\'t support fingerprint authentication.</string>
    <string name="enable_lock">Please enable lock screen security in your device\'s settings to proceed.</string>
    <string name="no_finger_registered">No fingerprint configured. Please register at least one fingerprint in your device\'s Settings.</string>
    <string name="active_subscription">Active Subscription</string>
    <string name="active_services">Active Services</string>
    <string name="expire">Subscription Expire - 09 April 2020</string>
    <string name="support">Support</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="device_health_test_result">Device Health Test Result</string>
    <string name="address">Address</string>
    <string name="pin_code">Pin Code</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="device_name">Device Name</string>
    <string name="storage_size">Storage Size</string>
    <string name="device_imei">Device IMEI</string>
    <string name="register">Register</string>
    <string name="spot_check">Spot check</string>
    <string name="spotcheck_details">You will decide what to test from a variety of options.</string>
    <string name="auto_checkup">Auto checkup</string>
    <string name="autocheckup_details">The system automatically checks through the series of test options.</string>
    <string name="what_type_of_test_do_you_want_to_run">What type of test do you want to run?</string>
    <string name="go_to_settings">GO TO SETTINGS</string>
    <string name="powered_by_sentinel">Powered by Sentinel</string>
    <string name="warn_increase_voice">Input is low, please increase your voice</string>

</resources>
