<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardElevation="5dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/volume_dialog"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:layout_margin="25dp"/>


            <ImageView
                android:id="@+id/image"
                android:layout_below="@+id/dialog"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_background_red"
                android:src="@drawable/volume_50px" />

            <TextView
                android:id="@+id/explain"
                android:layout_below="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:text="@string/volume_dialog_details"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/volumeUp"
                android:layout_below="@+id/explain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume_up_pressed"
                android:layout_margin="10dp"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/volumeDown"
                android:layout_below="@id/volumeUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume_down_pressed"
                android:textAlignment="center"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/result"
                android:layout_below="@id/volumeDown"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/green"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:text="Pass" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_below="@+id/result"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:background="@drawable/label_background"
            android:drawableStart="@drawable/continue_50px"
            android:drawablePadding="5dp"
            android:text="@string/start"
            android:paddingStart="1dp"
            android:paddingEnd="5dp"
            android:visibility="gone"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/skip"
            android:textSize="20sp" />

    </LinearLayout>


</RelativeLayout>